<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">SuperTV</string>
    <string name="splash_content_txt">Super Splash</string>
    <string name="title_activity_main">SuperUni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Univ Galaxy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tvseries">TV SERIES</string>
    <string name="menu_kids">KIDS</string>
    <string name="menu_entrem">ENTERENIMIENTO</string>
    <string name="menu_eventos">EVENTOS</string>
    <string name="menu_livetv">LIVE TV</string>
    <string name="menu_karaok">KARAOKE</string>
    <string name="menu_adult">ADULT</string>
    <string name="search_title">Search</string>
    <string name="bottom_home">Home</string>
    <string name="title_search">Browse</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="view_all">More</string>
    <string name="solved">Solved</string>
    <string name="closed">Closed</string>
    <string name="prompt_password">Contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="episode_text">Episode</string>
    <string name="trailers_text">Trailers</string>
    <string name="info_text">Info</string>
    <string name="maincategory_column_num">2</string>
    <string name="maincategory_direction">0</string>
    <string name="more_video">3</string>
    <string name="episode">1</string>
    <string name="login_screen_username">Username</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_email">Email</string>
    <string name="login_screen_password_confirm">Confirm Password</string>
    <string name="login_screen_next">Next</string>
    <string name="wait">Please Wait&#8230;</string>
    <string name="tag_esp_srt">Español</string>
    <string name="tag_esp">Español</string>
    <string name="tag_eng">Ingles</string>
    <string name="ok_dialog">Aceptar</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Subtítulo</string>
    <string name="selection_disabled">Deshabilitado</string>
    <string name="generic_error_message_title">Error</string>
    <string name="generic_error_message">Hubo un error reproduciendo su video, por favor intenta de nuevo.</string>
    <string name="retry">Reintentar</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="no_connection_title">Error</string>
    <string name="no_connection_message">Por favor verifique su conexión a internet.</string>
    <string name="generic_error_title">Error</string>
    <string name="exception_title">Please check the internet Connection and Try again.</string>
    <string name="exception_content">Sorry. There was some issues in internet Connection.</string>
    <string name="generic_loading_message">Hubo un error cargando las películas, por favor intenta de nuevo.</string>
    <string name="generic_video_loading_message">Hubo un error cargando el video que deseas, por favor intenta de nuevo. Check NetSpeed?</string>
    <string name="title_order_message">No se encontró Ningún Resultado, Quieres ordenar esta Película? </string>
    <string name="title_activity_movies_menu">MoviesMenuActivity</string>
    <string name="title_activity_loading_movies">LoadingMoviesActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Usuario</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="error_incorrect_password">Tus datos no son correctos.</string>
    <string name="error_field_required">Ocupas ingresar tus datos</string>
    <string name="verify_unknown_sources">Por favor verifica que tengas activado el permiso de instalación de aplicaciones de fuentes desconocidas.</string>
    <string name="new_version_available">Hay una nueva versión, descargala ya!</string>
    <string name="download">Descargar</string>
    <string name="downloading">Descargando...</string>
    <string name="new_version_generic_error_message">Hubo un error descargando la actualización, por favor intenta de nuevo más tarde.</string>
    <string name="attention">Atención</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="config">Configuración</string>
    <string name="permission_storage">El permiso de Escritura en memoria externa es necesario para descargar actualizaciones a tu dispositivo.</string>
    <string name="permission_storage_config">El permiso de Escritura en memoria externa es necesario para descargar actualizaciones a tu dispositivo. Por favor actívalo desde la configuración de la aplicación.</string>
    <string name="permission_rationale">El permiso de Teléfono es necesario para ligar tu cuenta a tu dispositivo.</string>
    <string name="permission_rationale_config">El permiso de Teléfono es necesario para ligar tu cuenta a tu dispositivo. Por favor actívalo desde la configuración de la aplicación.</string>
    <string name="permission_audio">El permiso de Grabado de audio es necesario para hacer búsquedas por reconocimiento de voz.</string>
    <string name="permission_audio_config">El permiso de Grabado de audio es necesario para hacer búsquedas por reconocimiento de voz. Por favor actívalo desde la configuración de la aplicación.</string>
    <string name="login_error_already_registered">Este dispositivo ya está registrado a otro usuario.</string>
    <string name="login_error_no_authorized">Este dispositivo no está autorizado.</string>
    <string name="login_error_usr_pss_incorrect">Usuario o contraseña incorrectos.</string>
    <string name="sign_incorrect_character">usuario muy corto o caracteres no permitidos.</string>
    <string name="login_error_generic">No se pudo iniciar sesión [CODE].</string>
    <string name="login_error_nosession">No se pudo iniciar sesión.</string>
    <string name="login_error_demo">Las cuentas de demostración no pueden ser usadas en Android. Por favor comunícate con el Administrador para solicitar una cuenta real.</string>
    <string name="ip_limitation">Es necesario usar la misma ip</string>
    <string name="email_duplication">Email already exists.</string>
    <string name="login_error_change_account">Este dispositivo está ligado a otra cuenta. \nPor favor comunícate con tu Administrador con el siguiente identificador:\n{ID}</string>
    <string name="login_error_change_device">Esta cuenta está ligada con otro dispositivo. \nPor favor comunícate con tu Administrador con el siguiente identificador:\n{ID}</string>
    <string name="login_error_change_device_success">Se ha desligado la cuenta con el antigüo dispositivo, por favor inicia sesión de nuevo.</string>
    <string name="login_error_change_device_error">Hubo un error desligando la cuenta, por favor intente de nuevo. Si el error persiste, por favor contacta al administrador.</string>
    <string name="login_error_expired">El tiempo de suscripción de tu cuenta ha expirado, por favor comunicate con tu proveedor para activarla de nuevo.</string>
    <string name="close_session_no_internet">No puedes cerrar sesión sin conexión a internet, por favor verifica que tu conexión este activa.</string>
    <string name="movies_loading_error">Hubo un error cargando la lista.</string>
    <string name="end_session_message">Estás seguro que deseas cerrar tu sesión?</string>
    <string name="adults_set_password_message">Por favor introduce la nueva contraseña personalizada para la sección de adultos.</string>
    <string name="adults_set_password_success_message">La contraseña ha sido configurada correctamente.</string>
    <string name="adults_set_password_empty_message">Debes agregar al menos 4 dígitos para la contraseña.</string>
    <string name="adults_password_message">Por favor introduce la contraseña para accesar a esta categoría.</string>
    <string name="from_start">Continuar viendo?</string>
    <string name="castTitle">Cast or Phone?</string>
    <string name="castingTitle">Cast to</string>
    <string name="cast">Cast</string>
    <string name="reportTitle">Reportar Falla</string>
    <string name="castLoading">Searching for devices...</string>
    <string name="phone">Play on Phone</string>
    <string name="castDescription">Make sure your phone and cast device are connected to the same Wi-Fi</string>
    <string name="app_id">4F8B3483</string>
    <string name="channel_Name">channel1</string>
    <string name="channel_description">testChannel</string>
    <string name="title_story">Description</string>
    <string name="transition_image">transition-image</string>
    <string name="processing">Please Wait...</string>
    <string name="logo_inapp_link">https://github.com/librespeed/speedtest-android</string>
    <string name="privacy_policy">file:///android_asset/privacy_en.html</string>
    <string name="init_init">Loading</string>
    <string name="initFail_configError">Configuration error</string>
    <string name="initFail_retry">Retry</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_upper">SIGN UP</string>
    <string name="sign_up_lower">Sign Up</string>
    <string name="signin_upper">SIGN IN</string>
    <string name="sign_in_lower">Sign In</string>
    <string name="signin_with_google">Sign In with Google</string>
    <string name="just_one_more_step">Just one more step&#8230;</string>
    <string name="enter_code">Enter code</string>
    <string name="type_code">Please type your verification code</string>
    <string name="resend">Resend the Code</string>
</resources>