<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50" />
    <LinearLayout
        android:paddingStart="@dimen/dip_70"
        android:paddingEnd="@dimen/dip_70"
        android:paddingTop="@dimen/dip_70"
        android:paddingBottom="@dimen/dip_70"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btnSolved"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_35"
            android:gravity="center"
            android:text="@string/solved"
            android:background="@drawable/rounded_outline_background_white"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/btnClosed"
            android:layout_marginTop="@dimen/dip_20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_35"
            android:gravity="center"
            android:text="@string/closed"
            android:background="@drawable/rounded_outline_background_white"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/btnCancel"
            android:layout_marginTop="@dimen/dip_20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_35"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/rounded_outline_background_white"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>
