<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/bg_general"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dip_20"
        android:paddingEnd="@dimen/dip_20">
        <RelativeLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_one_more_step"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_code"
                android:textColor="@color/white"
                />
            <EditText
                android:id="@+id/etCode"
                android:layout_marginTop="@dimen/sp_15"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip_30"
                android:background="@color/transparent"
                android:hint="@string/type_code"
                android:textSize="@dimen/sp_15"
                android:imeOptions="actionDone"
                android:inputType="number"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip_1"
                android:background="@color/netflix_red"
                />

        </LinearLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dip_16"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/dip_12"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/btnResend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        style="@style/play_text"
                        android:text="@string/resend"
                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_16"
                android:layout_below="@id/card_resend"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/dip_12"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/cv_verifyScreen_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        style="@style/play_text"
                        android:text="@string/sign_up_lower"
                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/dip_50"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/btnSignin"
                        android:textSize="@dimen/sp_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signin_upper"
                        android:textColor="@color/white"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dip_1"
                        android:background="@color/white"
                        />

            </LinearLayout>
        </RelativeLayout>
</LinearLayout>