<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/inform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dip_8"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <net.steamcrafted.materialiconlib.MaterialIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:materialIcon="information"
                app:materialIconColor="@color/blue_dark"
                app:materialIconSize="24dp"
                android:layout_marginEnd="@dimen/dip_8"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:text="@string/castingTitle"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dip_16">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:textSize="@dimen/sp_11"
                android:textColor="@color/translucent_black_85"
                android:text="@string/castDescription"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            tools:ignore="RtlHardcoded">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/netflix_red"
                android:textStyle="bold"
                android:background="@drawable/dialog_btn_background"
                android:focusable="true"
                android:clickable="true"
                android:padding="@dimen/dip_8"
                android:layout_marginRight="@dimen/dip_8"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/ok_dialog"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>