<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">
    <LinearLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="@dimen/dip_160"
            android:layout_height="match_parent"
            android:src="@drawable/android_splash" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dip_30"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            style="@style/text"
            android:textSize="@dimen/sp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_username" />
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/netflix_red"
            android:nextFocusDown="@id/edit_password"
            android:textColorHint="@color/netflix_red"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_10"
            android:imeOptions="actionNext"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent" />
        <TextView
            style="@style/text"
            android:textSize="@dimen/sp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_password" />
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/login"
            android:nextFocusDown="@id/cv_loginScreen_login"
            android:backgroundTint="@color/netflix_red"
            android:inputType="textPassword"
            android:textColorHint="@color/netflix_red"
            tools:ignore="InvalidImeActionId"
            android:textSize="@dimen/sp_10"
            android:imeOptions="actionDone"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_32"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="@dimen/dip_20"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/cv_loginScreen_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    style="@style/play_text"
                    android:background="@drawable/background_sign_in_up"
                    android:text="@string/sign_in_lower"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dip_30"
        android:layout_marginEnd="@dimen/dip_30"
        android:layout_marginBottom="@dimen/dip_20">
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/white"
                    />
                <TextView
                    android:layout_marginStart="@dimen/dip_10"
                    android:layout_marginEnd="@dimen/dip_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textColor="@color/white"
                    />
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/white"
                    />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_32"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/dip_20">
                    <LinearLayout
                     android:id="@+id/ll_FacebookSignin"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:background="@drawable/background_google_signup"
                     android:paddingTop="@dimen/dip_10"
                     android:paddingBottom="@dimen/dip_10"
                     android:paddingStart="@dimen/dip_8"
                     android:paddingEnd="@dimen/dip_8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="true">
                         <ImageView
                             android:padding="@dimen/dip_1"
                             android:layout_width="@dimen/dip_25"
                             android:layout_height="match_parent"
                             android:src="@drawable/ic_google"
                             />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/signin_with_google"
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_12"
                             android:focusable="false"
                             android:clickable="false"
                             android:layout_marginStart="@dimen/dip_10"
                             />
                    </LinearLayout>
            </androidx.cardview.widget.CardView>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip_32"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_40">
            <LinearLayout
                android:id="@+id/tv_ForgotPw"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/sp_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dip_1"
                    android:background="@color/white"
                    />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_SignUp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/sp_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_upper"
                        android:textColor="@color/white"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dip_1"
                        android:background="@color/white"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>